# tech-salary-radar

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: backfill.yml  ci.yml  llm-eval.yml  pipeline.yml  smoke.yml
.wrangler/cache/: pages.json  wrangler-account.json
data/: seed_companies.json
data/cache/: fx_latest.json  last_run.json
data/eval/: skills_eval.jsonl
data/jobs/dt=2026-07-18/: part.parquet
data/jobs/dt=2026-07-19/: part.parquet
data/jobs/dt=2026-07-20/: part.parquet
data/jobs/dt=2026-07-21/: part.parquet
docs/: IMPROVEMENTS.md
etl/: aggregate.py  cli.py  config.py  fetch.py  fx.py  normalize.py  salary.py  skills.py  skills_catalog.py  sources.py
probe-scripts/: areas.json  body2.json  curl_test.json  dict_probe.json  hhlib.py  kz_python.json  kzapi.json  prof_roles.json  retry_ban.py  retry_log.txt  s1_areas_limits.py  s2_search_core.py  s3_detail.py  s4_counts.py  s5_rapid.py  s6_sample.py
probe-scripts/ats-recon/: COOKBOOK.md  build_eval.py  build_seed.py  expand_seed.py  extend_eval.py  sample_ashby_linear.json
site/: app.js  index.html  style.css
site/data/: badge.json  eval_badge.json  latest.json  meta.json  timeseries.json
tests/: conftest.py  test_aggregate.py  test_cli_dry.py  test_config.py  test_eval_labels.py  test_eval_llm.py  test_fx.py  test_normalize.py  test_salary.py  test_skills.py  test_sources.py
tests/fixtures/: greenhouse.json  lever.json
(+17 files in other folders)
