[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-radar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "pandas>=2.2,<4",
  "pyarrow>=17,<26",
  "duckdb>=1.1,<2",
  "google-genai>=2.12.1,<3",
  "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[tool.setuptools]
packages = ["etl"]

[tool.pytest.ini_options]
markers = ["llm_eval: тесты с реальным вызовом Gemini (нужен GEMINI_API_KEY)"]

[tool.ruff]
line-length = 100
